--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings 配置站点
-title: '李沛恒博客'
+title: '李沛恒的博客'
 description: '天下大事必做于细，天下难事必做于易'
 keyword: '算法与数据结构，linux'
 url: '' # your host
