--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ footer:
 # Author 配置博主信息
 author: '李沛恒'
 nickname: 'IAM'
-bio: '程序员'
+bio: '学生'
 avatar: ''
 
 # Search
@@ -53,6 +53,7 @@ sns:
   juejin: '//juejin.im/user/57a6f434165abd006159b4cc'
   instagram: '//www.instagram.com/steveliaocn'
   github: '//github.com/IAMjmj'
+  qq:'//qq.com'
 
 # Tags 设置标签
 recommend-tags: true # whether or not display recommend-tags on the sidebar
