--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ footer:
 author: '李沛恒'
 nickname: 'IAM'
 bio: '学生'
-avatar: 'arrets/img/hero.jpg'
+avatar: 'arrets/img/111.jpg'
 
 # Search
 search: true
