--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 'I AM的博客'
 description: '天下大事必做于细，天下难事必做于易'
 keyword: '算法与数据结构，linux'
-url: 'https://github.com/IAMjmj' # your host
+url: 'https://github.com/IAMjmj/IAMjmj.github.io/blob/master' # your host
 
 # if you don't need baseurl, you should leave this value blank.
 baseurl: ''
