--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ footer:
 author: '李沛恒'
 nickname: 'IAM'
 bio: '学生'
-avatar: 'assets/img/2.jpg'
+avatar: 'assets/css/d344d757eec9c0ef92c4abc0ec53f2ae.png'
 
 # Search
 search: true
